<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".LoginActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="40dp"
			android:layout_marginRight="40dp"
			android:layout_gravity="center"
			android:layout_marginTop="30dp"

			android:text="@string/LOGIN_explanation"
			style="@style/TextExplanationSmall"
			/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="40dp"
			android:layout_marginRight="40dp"
			android:layout_marginTop="30dp"
			android:layout_marginBottom="30dp"
			android:orientation="vertical"
			android:background="@drawable/rectangle_opaque">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:layout_marginTop="5dp"
				android:layout_marginBottom="10dp"
				android:layout_gravity="center"
				android:text="@string/LOGIN_subtitle"
				style="@style/BoldSubtitleFont"
				/>

			<EditText
				android:id="@+id/txt_username"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp"
				android:padding="10dp"
				android:drawableStart="@drawable/face"
				android:hint="@string/LOGIN_user_hint"
				android:background="@drawable/white_rounded_rectangle"
				/>

			<EditText
				android:id="@+id/txt_pwd"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp"
				android:padding="10dp"
				android:inputType="textPassword"
				android:drawableStart="@drawable/key"
				android:hint="@string/LOGIN_pwd_hint"
				android:background="@drawable/white_rounded_rectangle"
				/>

			<Button
				android:id="@+id/btn_login"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="30dp"
				android:layout_marginRight="30dp"
				android:layout_marginTop="20dp"
				android:layout_marginBottom="10dp"
				android:padding="5dp"
				android:gravity="center"
				android:layout_gravity="center"
				android:text="@string/LOGIN_login"
				android:background="@drawable/white_rounded_rectangle"
				style="@style/TextWhiteBtnFont"
				/>
		</LinearLayout>

		<Button
			android:id="@+id/btn_create_account"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="60dp"
			android:layout_marginRight="60dp"
			android:layout_marginTop="20dp"
			android:layout_marginBottom="10dp"
			android:padding="5dp"
			android:gravity="center"
			android:layout_gravity="center"
			android:text="@string/LOGIN_create_account"
			android:background="@drawable/rectangle_opaque"
			style="@style/TextWhiteBtnFont"
			/>

		<Button
			android:id="@+id/btn_create_owner"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="60dp"
			android:layout_marginRight="60dp"
			android:layout_marginTop="20dp"
			android:layout_marginBottom="10dp"
			android:padding="5dp"
			android:gravity="center"
			android:layout_gravity="center"
			android:text="@string/LOGIN_create_owner"
			android:background="@drawable/rectangle_opaque"
			style="@style/TextWhiteBtnFont"
			/>

		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginLeft="30dp"
			android:layout_marginRight="30dp"
			android:layout_marginTop="30dp"
			android:background="@color/colorBlack"/>

		<Button
			android:id="@+id/btn_forgot_password"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="40dp"
			android:layout_marginRight="40dp"
			android:layout_marginTop="0dp"
			android:layout_marginBottom="0dp"
			android:paddingTop="15dp"
			android:paddingBottom="15dp"
			android:gravity="center"
			android:layout_gravity="center"
			android:text="@string/LOGIN_forgot_pwd"
			android:background="@android:color/transparent"
			style="?android:attr/borderlessButtonStyle"
			/>
		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginLeft="30dp"
			android:layout_marginRight="30dp"

			android:background="@color/colorBlack"/>


	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>