<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<GridView
		android:id="@+id/gridview"
		android:numColumns="2"
		android:verticalSpacing="-5dp"
		android:background="#e5e5e5"
		android:horizontalSpacing="-5dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		tools:ignore="MissingConstraints">
	</GridView>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<LinearLayout
			android:layout_width="300dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="50dp"
			android:layout_marginRight="50dp"
			android:shadowRadius="2"
			android:shadowDx="2"
			android:shadowDy="4"
			android:shadowColor="@color/colorBlack"
			android:layout_gravity="center"
			android:orientation="vertical"
			android:background="@drawable/blue_rounded_rectangle">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:layout_marginTop="10dp"
				android:text="@string/DASHBOARD_subtitle"
				style="@style/BoldSubtitleFont"
				/>

			<EditText
				android:id="@+id/txt_city"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp"
				android:padding="10dp"
				android:drawableStart="@drawable/search_icon"
				android:hint="@string/DASHBOARD_city_hint"
				android:background="@drawable/white_rounded_rectangle"
				/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<Button
					android:id="@+id/btn_from"
					android:layout_width="110dp"
					android:layout_height="fill_parent"
					android:layout_marginLeft="10dp"
					android:padding="5dp"
					android:drawableStart="@drawable/calendar_icon"
					android:hint="@string/DASHBOARD_from"
					android:background="@drawable/white_rounded_rectangle"
					/>

				<Button
					android:id="@+id/btn_to"
					android:layout_width="110dp"
					android:layout_height="fill_parent"
					android:layout_marginLeft="20dp"
					android:padding="5dp"
					android:layout_gravity="end"
					android:drawableStart="@drawable/calendar_icon"
					android:hint="@string/DASHBOARD_to"
					android:background="@drawable/white_rounded_rectangle"
					/>


			</LinearLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:layout_marginTop="10dp"
				android:background="@color/colorBlack"/>

			<Button
				android:id="@+id/btn_search_accomm"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:layout_marginTop="10dp"
				android:padding="5dp"
				android:gravity="center"
				android:layout_gravity="center"
				android:text="@string/DASHBOARD_search"
				android:background="@drawable/white_rounded_rectangle"
				style="@style/TextWhiteBtnFont"
				/>

			<Button
				android:id="@+id/btn_search_cost"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="5dp"
				android:padding="5dp"
				android:gravity="center"
				android:layout_gravity="center"
				android:text="@string/DASHBOARD_cost"
				android:background="@drawable/white_rounded_rectangle"
				style="@style/TextWhiteBtnFont"
				/>
		</LinearLayout>
	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>