<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestActivity">

    <LinearLayout
        android:id="@+id/ly_myaccoms"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_home"
                >

            </ImageView>

            <TextView
                style="@style/TextExplanationBig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="24dp"
                android:text="@string/MYACCOMM_subtitle" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_upload_accomm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/MYACCOMM_upload"
            android:background="@drawable/rectangle_opaque"
            style="@style/TextWhiteBtnFont"
            />

        <Button
            android:id="@+id/btn_status_accomm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/MYACCOMM_status"
            android:background="@drawable/rectangle_opaque"
            style="@style/TextWhiteBtnFont"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@color/colorBlack" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>